# ai_edih_llm_comparison_project

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  agents.py  config.py  judge.py  observability.py  rendering.py  runner.py  schema.py  ui.py
docs/: documentation.md
tests/: conftest.py  test_judge.py  test_rendering.py  test_runner_helpers.py
tests/evals/: test_smoke.py
